# LifeSimulation

./: .gitignore  CMakeLists.txt  logger.txt
src/: main.cpp  ss
src/console/: Console.cpp  NCurses.cpp
src/console/include/: Console.hpp  NCurses.hpp
src/controllers/: MainController.cpp
src/controllers/include/: MainController.hpp
src/output/: Console.cpp  Console.h  Logger.cpp  Logger.h
src/places/: Barber.cpp  Barber.h  Basketball.cpp  ChessClub.cpp  Hotel.cpp  Place.cpp  Place.h  Place.hpp  Place1.cpp  Place1.h  Place2.cpp  Place2.h  Restaurant.cpp
src/places/include/: Barber.h  Basketball.hpp  ChessClub.h  Hotel.h  Place.hpp  Restaurant.h
src/synchronizers/: CriticalSection.cpp  CriticalSection.h
src/threads/: Human.cpp  Human.h  IHuman.h  WorkerThread.cpp  WorkerThread.h  WorkerThread.hpp  WorkerThreadMenager.cpp  WorkerThreadMenager.h
src/threads/include/: Human.hpp
